not finished yet, but will soon.
Does not function as I want to

--- a/Wishlist.html
+++ b/Wishlist.html
@@ -59,9 +59,48 @@
 	  
  <main>
 	 <div class="container">
-		 
+		<ul>
+  <li> 
+	  <h3> Huge Panda Pillow</h3>
+			 <h6> €60 </h6>
+	  <img src="images/1x/Asset 2.png" width="30"> 
+	  <img src="images/1x/Asset 1.png" width="30"> 
+	  
+	  
+			</li>
+  <li>
+	  <h3> Carrot Cake</h3>
+			 <h6> €10</h6>
+	   <img src="images/1x/Asset 2.png" width="30">
+		<img src="images/1x/Asset 1.png" width="30"> 
+			</li>
+  <li>
+	  <h3> Heart necklace</h3>
+			 <h6> €15</h6>
+	   <img src="images/1x/Asset 2.png" width="30">
+	  <img src="images/1x/Asset 1.png" width="30"> 
+			
+			</li>
+	<li>
+	  <h3> Personalised mug</h3>
+			 <h6> €10</h6>
+		 <img src="images/1x/Asset 2.png" width="30">
+	<img src="images/1x/Asset 1.png" width="30"> 	
+			</li>
+</ul> 
 		 
 	 </div>
+	 <h4 class="newitem"> Add a new item to your Whishlist</h4>
+	 
+	 <form class="formstyle" action="/action_page.php">
+
+  <input class="inputstyle" type="text" id="fname" name="fname" value="Item description"><br>
+  <input class="inputstyle" type="text" id="lname" name="lname" value="Estimated price"><br><br>
+  <input class="buttonstyle" type="submit" value="Save">
+</form> 
+
+	 
+	 
   
 </main>
 		  
